--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "deploy": "zmp deploy"
   },
   "dependencies": {
+    "@cerebras/cerebras_cloud_sdk": "^1.59.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
