chore(config): update app configuration and CSP headers
- Add template configuration with extended domains for workers.vrp.moe
- Update Content-Security-Policy to allow connections to Cerebras AI API
- Simplify Cerebras API endpoint URL in CSP connect-src directive
- Format app-config.json with proper JSON structure and trailing newline

--- a/app-config.json
+++ b/app-config.json
@@ -12,5 +12,8 @@
   },
   "listCSS": [],
   "listSyncJS": [],
-  "listAsyncJS": []
+  "listAsyncJS": [],
+  "template": {
+    "extendedDomains": ["workers.vrp.moe"]
+  }
 }
