feat(gacha): add gacha data synchronization service and Firebase admin integration
- Add firebase-admin dependency for server-side Firebase operations
- Create gacha-service.ts with data synchronization utilities
- Add sync-gacha-data.cjs script for automated gacha data updates
- Update gacha.tsx page to integrate new gacha service
- Add firebase-service-account.json to .gitignore for security
- Install Google Cloud dependencies (@google-cloud/firestore, @google-cloud/storage) for enhanced data management
- Enable server-side gacha data synchronization with Firestore backend

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ node_modules/
 # dotenv environment variables file
 .env
 
+# Firebase service account key (sensitive!)
+firebase-service-account.json
+
 # Misc
 .DS_Store
 Thumbs.db
