--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.26",
     "howler": "^2.2.4",
     "jotai": "^2.12.1",
