--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@google/genai": "^1.33.0",
     "@hookform/resolvers": "^5.2.2",
     "@openrouter/sdk": "^0.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.15",
