--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gacha-video-proxy",
+  "name": "gacha-firebase-bridge",
   "version": "1.0.0",
-  "description": "Proxy server to fetch fresh video URLs from Bilibili API",
+  "description": "Firebase Bridge Server for Gacha API",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "firebase-admin": "^12.0.0",
     "node-fetch": "^3.3.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
